--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+.tile {
+    position: relative;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: all 0.5s;
+  
+    width: 12rem;
+    height: 12rem;
+  
+    color: #fff;
+    font-family: sans-serif;
+  
+    box-shadow: 0px 0px 25px -15px rgba(66, 68, 90, 1);
+  }
+  
+  .tile:hover {
+    transform: translateY(-5%);
+    box-shadow: 0px 0px 40px -15px rgba(66, 68, 90, 1);
+  }
+  
+  .tile__face {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden; /*hide element on back*/
+  }
+  
+  .tile__face--back {
+    /*  rotated on start so the front is visible first */
+    transform: rotateY(180deg);
+  }
+  
+  .tile.is-flipped {
+    transform: translateX(-100%) rotateY(-180deg);
+  }
