--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,37 @@
     transform-origin: center right;
     transition: all 0.5s;
   
-    width: 12rem;
-    height: 12rem;
+    width: 10rem;
+    height: 10rem;
   
     color: #fff;
     font-family: sans-serif;
   
     box-shadow: 0px 0px 25px -15px rgba(66, 68, 90, 1);
+  }
+
+  @media (max-width: 600px) {
+    .tile {
+     
+      width: 4rem;
+      height: 4rem;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .tile {
+     
+      width: 6rem;
+      height: 6rem;
+    }
+  }
+
+  @media (max-width: 1000px) {
+    .tile {
+     
+      width: 8rem;
+      height: 8rem;
+    }
   }
   
   .tile:hover {
