--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,229 @@
   .tile.is-flipped {
     transform: translateX(-100%) rotateY(-180deg);
   }
+
+
+
+
+
+
+  .pyro-container {
+    width: 100% !important;
+    height: 100vh !important;
+    margin: 0;
+    padding: 0;
+    background: #000;
+    overflow: hidden;
+  }
+  
+  .pyro > .before, .pyro > .after {
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    box-shadow: 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff;
+    -moz-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    -webkit-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    -o-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    -ms-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+    animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  }
+  
+  .pyro > .after {
+    -moz-animation-delay: 1.25s, 1.25s, 1.25s;
+    -webkit-animation-delay: 1.25s, 1.25s, 1.25s;
+    -o-animation-delay: 1.25s, 1.25s, 1.25s;
+    -ms-animation-delay: 1.25s, 1.25s, 1.25s;
+    animation-delay: 1.25s, 1.25s, 1.25s;
+    -moz-animation-duration: 1.25s, 1.25s, 6.25s;
+    -webkit-animation-duration: 1.25s, 1.25s, 6.25s;
+    -o-animation-duration: 1.25s, 1.25s, 6.25s;
+    -ms-animation-duration: 1.25s, 1.25s, 6.25s;
+    animation-duration: 1.25s, 1.25s, 6.25s;
+  }
+  
+  @-webkit-keyframes bang {
+    to {
+      box-shadow: -122px -402.6666666667px #006fff, 245px 49.3333333333px red, -50px -95.6666666667px #5e00ff, -70px -297.6666666667px #00ff6f, 174px -280.6666666667px #0088ff, -193px -159.6666666667px #ffa600, -179px -351.6666666667px #bb00ff, 145px -161.6666666667px #0037ff, -8px -370.6666666667px #f700ff, 202px 58.3333333333px #ff00aa, -98px -212.6666666667px #ffbf00, 169px 2.3333333333px #00ffe1, 77px -53.6666666667px #0400ff, 180px -365.6666666667px #ff1100, 12px -315.6666666667px #ff00f7, 56px -232.6666666667px #a2ff00, 98px 77.3333333333px #ff0099, 100px -287.6666666667px #d9ff00, 66px -398.6666666667px #ea00ff, -242px -221.6666666667px #0040ff, -209px -375.6666666667px #008cff, 2px -125.6666666667px #ff00b7, -120px -413.6666666667px #ffd000, -215px -88.6666666667px #ff0077, 159px -264.6666666667px #5100ff, -163px -171.6666666667px #c400ff, 219px -378.6666666667px #d5ff00, -118px -204.6666666667px #ffcc00, -25px -346.6666666667px #8cff00, 197px -104.6666666667px #001aff, -206px -288.6666666667px #00d0ff, -203px 68.3333333333px #04ff00, -102px -373.6666666667px #ff0099, 37px -0.6666666667px #ff8400, -37px -142.6666666667px #00ff11, 68px -50.6666666667px #ff1100, -50px 39.3333333333px #0051ff, 199px -381.6666666667px #5eff00, -20px 32.3333333333px #48ff00, 115px -338.6666666667px #00ccff, -144px -355.6666666667px #5900ff, 45px -413.6666666667px darkorange, -230px -302.6666666667px #ff2f00, 136px -97.6666666667px #a6ff00, -232px -86.6666666667px #00f2ff, 222px -177.6666666667px #ff00cc, 153px -397.6666666667px #ff0084, -52px 63.3333333333px #8800ff, 119px -169.6666666667px #84ff00, 203px -406.6666666667px #ff6a00, 218px 82.3333333333px #00ffea;
+    }
+  }
+  @-moz-keyframes bang {
+    to {
+      box-shadow: -122px -402.6666666667px #006fff, 245px 49.3333333333px red, -50px -95.6666666667px #5e00ff, -70px -297.6666666667px #00ff6f, 174px -280.6666666667px #0088ff, -193px -159.6666666667px #ffa600, -179px -351.6666666667px #bb00ff, 145px -161.6666666667px #0037ff, -8px -370.6666666667px #f700ff, 202px 58.3333333333px #ff00aa, -98px -212.6666666667px #ffbf00, 169px 2.3333333333px #00ffe1, 77px -53.6666666667px #0400ff, 180px -365.6666666667px #ff1100, 12px -315.6666666667px #ff00f7, 56px -232.6666666667px #a2ff00, 98px 77.3333333333px #ff0099, 100px -287.6666666667px #d9ff00, 66px -398.6666666667px #ea00ff, -242px -221.6666666667px #0040ff, -209px -375.6666666667px #008cff, 2px -125.6666666667px #ff00b7, -120px -413.6666666667px #ffd000, -215px -88.6666666667px #ff0077, 159px -264.6666666667px #5100ff, -163px -171.6666666667px #c400ff, 219px -378.6666666667px #d5ff00, -118px -204.6666666667px #ffcc00, -25px -346.6666666667px #8cff00, 197px -104.6666666667px #001aff, -206px -288.6666666667px #00d0ff, -203px 68.3333333333px #04ff00, -102px -373.6666666667px #ff0099, 37px -0.6666666667px #ff8400, -37px -142.6666666667px #00ff11, 68px -50.6666666667px #ff1100, -50px 39.3333333333px #0051ff, 199px -381.6666666667px #5eff00, -20px 32.3333333333px #48ff00, 115px -338.6666666667px #00ccff, -144px -355.6666666667px #5900ff, 45px -413.6666666667px darkorange, -230px -302.6666666667px #ff2f00, 136px -97.6666666667px #a6ff00, -232px -86.6666666667px #00f2ff, 222px -177.6666666667px #ff00cc, 153px -397.6666666667px #ff0084, -52px 63.3333333333px #8800ff, 119px -169.6666666667px #84ff00, 203px -406.6666666667px #ff6a00, 218px 82.3333333333px #00ffea;
+    }
+  }
+  @-o-keyframes bang {
+    to {
+      box-shadow: -122px -402.6666666667px #006fff, 245px 49.3333333333px red, -50px -95.6666666667px #5e00ff, -70px -297.6666666667px #00ff6f, 174px -280.6666666667px #0088ff, -193px -159.6666666667px #ffa600, -179px -351.6666666667px #bb00ff, 145px -161.6666666667px #0037ff, -8px -370.6666666667px #f700ff, 202px 58.3333333333px #ff00aa, -98px -212.6666666667px #ffbf00, 169px 2.3333333333px #00ffe1, 77px -53.6666666667px #0400ff, 180px -365.6666666667px #ff1100, 12px -315.6666666667px #ff00f7, 56px -232.6666666667px #a2ff00, 98px 77.3333333333px #ff0099, 100px -287.6666666667px #d9ff00, 66px -398.6666666667px #ea00ff, -242px -221.6666666667px #0040ff, -209px -375.6666666667px #008cff, 2px -125.6666666667px #ff00b7, -120px -413.6666666667px #ffd000, -215px -88.6666666667px #ff0077, 159px -264.6666666667px #5100ff, -163px -171.6666666667px #c400ff, 219px -378.6666666667px #d5ff00, -118px -204.6666666667px #ffcc00, -25px -346.6666666667px #8cff00, 197px -104.6666666667px #001aff, -206px -288.6666666667px #00d0ff, -203px 68.3333333333px #04ff00, -102px -373.6666666667px #ff0099, 37px -0.6666666667px #ff8400, -37px -142.6666666667px #00ff11, 68px -50.6666666667px #ff1100, -50px 39.3333333333px #0051ff, 199px -381.6666666667px #5eff00, -20px 32.3333333333px #48ff00, 115px -338.6666666667px #00ccff, -144px -355.6666666667px #5900ff, 45px -413.6666666667px darkorange, -230px -302.6666666667px #ff2f00, 136px -97.6666666667px #a6ff00, -232px -86.6666666667px #00f2ff, 222px -177.6666666667px #ff00cc, 153px -397.6666666667px #ff0084, -52px 63.3333333333px #8800ff, 119px -169.6666666667px #84ff00, 203px -406.6666666667px #ff6a00, 218px 82.3333333333px #00ffea;
+    }
+  }
+  @-ms-keyframes bang {
+    to {
+      box-shadow: -122px -402.6666666667px #006fff, 245px 49.3333333333px red, -50px -95.6666666667px #5e00ff, -70px -297.6666666667px #00ff6f, 174px -280.6666666667px #0088ff, -193px -159.6666666667px #ffa600, -179px -351.6666666667px #bb00ff, 145px -161.6666666667px #0037ff, -8px -370.6666666667px #f700ff, 202px 58.3333333333px #ff00aa, -98px -212.6666666667px #ffbf00, 169px 2.3333333333px #00ffe1, 77px -53.6666666667px #0400ff, 180px -365.6666666667px #ff1100, 12px -315.6666666667px #ff00f7, 56px -232.6666666667px #a2ff00, 98px 77.3333333333px #ff0099, 100px -287.6666666667px #d9ff00, 66px -398.6666666667px #ea00ff, -242px -221.6666666667px #0040ff, -209px -375.6666666667px #008cff, 2px -125.6666666667px #ff00b7, -120px -413.6666666667px #ffd000, -215px -88.6666666667px #ff0077, 159px -264.6666666667px #5100ff, -163px -171.6666666667px #c400ff, 219px -378.6666666667px #d5ff00, -118px -204.6666666667px #ffcc00, -25px -346.6666666667px #8cff00, 197px -104.6666666667px #001aff, -206px -288.6666666667px #00d0ff, -203px 68.3333333333px #04ff00, -102px -373.6666666667px #ff0099, 37px -0.6666666667px #ff8400, -37px -142.6666666667px #00ff11, 68px -50.6666666667px #ff1100, -50px 39.3333333333px #0051ff, 199px -381.6666666667px #5eff00, -20px 32.3333333333px #48ff00, 115px -338.6666666667px #00ccff, -144px -355.6666666667px #5900ff, 45px -413.6666666667px darkorange, -230px -302.6666666667px #ff2f00, 136px -97.6666666667px #a6ff00, -232px -86.6666666667px #00f2ff, 222px -177.6666666667px #ff00cc, 153px -397.6666666667px #ff0084, -52px 63.3333333333px #8800ff, 119px -169.6666666667px #84ff00, 203px -406.6666666667px #ff6a00, 218px 82.3333333333px #00ffea;
+    }
+  }
+  @keyframes bang {
+    to {
+      box-shadow: -122px -402.6666666667px #006fff, 245px 49.3333333333px red, -50px -95.6666666667px #5e00ff, -70px -297.6666666667px #00ff6f, 174px -280.6666666667px #0088ff, -193px -159.6666666667px #ffa600, -179px -351.6666666667px #bb00ff, 145px -161.6666666667px #0037ff, -8px -370.6666666667px #f700ff, 202px 58.3333333333px #ff00aa, -98px -212.6666666667px #ffbf00, 169px 2.3333333333px #00ffe1, 77px -53.6666666667px #0400ff, 180px -365.6666666667px #ff1100, 12px -315.6666666667px #ff00f7, 56px -232.6666666667px #a2ff00, 98px 77.3333333333px #ff0099, 100px -287.6666666667px #d9ff00, 66px -398.6666666667px #ea00ff, -242px -221.6666666667px #0040ff, -209px -375.6666666667px #008cff, 2px -125.6666666667px #ff00b7, -120px -413.6666666667px #ffd000, -215px -88.6666666667px #ff0077, 159px -264.6666666667px #5100ff, -163px -171.6666666667px #c400ff, 219px -378.6666666667px #d5ff00, -118px -204.6666666667px #ffcc00, -25px -346.6666666667px #8cff00, 197px -104.6666666667px #001aff, -206px -288.6666666667px #00d0ff, -203px 68.3333333333px #04ff00, -102px -373.6666666667px #ff0099, 37px -0.6666666667px #ff8400, -37px -142.6666666667px #00ff11, 68px -50.6666666667px #ff1100, -50px 39.3333333333px #0051ff, 199px -381.6666666667px #5eff00, -20px 32.3333333333px #48ff00, 115px -338.6666666667px #00ccff, -144px -355.6666666667px #5900ff, 45px -413.6666666667px darkorange, -230px -302.6666666667px #ff2f00, 136px -97.6666666667px #a6ff00, -232px -86.6666666667px #00f2ff, 222px -177.6666666667px #ff00cc, 153px -397.6666666667px #ff0084, -52px 63.3333333333px #8800ff, 119px -169.6666666667px #84ff00, 203px -406.6666666667px #ff6a00, 218px 82.3333333333px #00ffea;
+    }
+  }
+  @-webkit-keyframes gravity {
+    to {
+      transform: translateY(200px);
+      -moz-transform: translateY(200px);
+      -webkit-transform: translateY(200px);
+      -o-transform: translateY(200px);
+      -ms-transform: translateY(200px);
+      opacity: 0;
+    }
+  }
+  @-moz-keyframes gravity {
+    to {
+      transform: translateY(200px);
+      -moz-transform: translateY(200px);
+      -webkit-transform: translateY(200px);
+      -o-transform: translateY(200px);
+      -ms-transform: translateY(200px);
+      opacity: 0;
+    }
+  }
+  @-o-keyframes gravity {
+    to {
+      transform: translateY(200px);
+      -moz-transform: translateY(200px);
+      -webkit-transform: translateY(200px);
+      -o-transform: translateY(200px);
+      -ms-transform: translateY(200px);
+      opacity: 0;
+    }
+  }
+  @-ms-keyframes gravity {
+    to {
+      transform: translateY(200px);
+      -moz-transform: translateY(200px);
+      -webkit-transform: translateY(200px);
+      -o-transform: translateY(200px);
+      -ms-transform: translateY(200px);
+      opacity: 0;
+    }
+  }
+  @keyframes gravity {
+    to {
+      transform: translateY(200px);
+      -moz-transform: translateY(200px);
+      -webkit-transform: translateY(200px);
+      -o-transform: translateY(200px);
+      -ms-transform: translateY(200px);
+      opacity: 0;
+    }
+  }
+  @-webkit-keyframes position {
+    0%, 19.9% {
+      margin-top: 10%;
+      margin-left: 40%;
+    }
+    20%, 39.9% {
+      margin-top: 40%;
+      margin-left: 30%;
+    }
+    40%, 59.9% {
+      margin-top: 20%;
+      margin-left: 70%;
+    }
+    60%, 79.9% {
+      margin-top: 30%;
+      margin-left: 20%;
+    }
+    80%, 99.9% {
+      margin-top: 30%;
+      margin-left: 80%;
+    }
+  }
+  @-moz-keyframes position {
+    0%, 19.9% {
+      margin-top: 10%;
+      margin-left: 40%;
+    }
+    20%, 39.9% {
+      margin-top: 40%;
+      margin-left: 30%;
+    }
+    40%, 59.9% {
+      margin-top: 20%;
+      margin-left: 70%;
+    }
+    60%, 79.9% {
+      margin-top: 30%;
+      margin-left: 20%;
+    }
+    80%, 99.9% {
+      margin-top: 30%;
+      margin-left: 80%;
+    }
+  }
+  @-o-keyframes position {
+    0%, 19.9% {
+      margin-top: 10%;
+      margin-left: 40%;
+    }
+    20%, 39.9% {
+      margin-top: 40%;
+      margin-left: 30%;
+    }
+    40%, 59.9% {
+      margin-top: 20%;
+      margin-left: 70%;
+    }
+    60%, 79.9% {
+      margin-top: 30%;
+      margin-left: 20%;
+    }
+    80%, 99.9% {
+      margin-top: 30%;
+      margin-left: 80%;
+    }
+  }
+  @-ms-keyframes position {
+    0%, 19.9% {
+      margin-top: 10%;
+      margin-left: 40%;
+    }
+    20%, 39.9% {
+      margin-top: 40%;
+      margin-left: 30%;
+    }
+    40%, 59.9% {
+      margin-top: 20%;
+      margin-left: 70%;
+    }
+    60%, 79.9% {
+      margin-top: 30%;
+      margin-left: 20%;
+    }
+    80%, 99.9% {
+      margin-top: 30%;
+      margin-left: 80%;
+    }
+  }
+  @keyframes position {
+    0%, 19.9% {
+      margin-top: 10%;
+      margin-left: 40%;
+    }
+    20%, 39.9% {
+      margin-top: 40%;
+      margin-left: 30%;
+    }
+    40%, 59.9% {
+      margin-top: 20%;
+      margin-left: 70%;
+    }
+    60%, 79.9% {
+      margin-top: 30%;
+      margin-left: 20%;
+    }
+    80%, 99.9% {
+      margin-top: 30%;
+      margin-left: 80%;
+    }
+  }
